--- a/index.html
+++ b/index.html
@@ -252,7 +252,9 @@
             }
 
             const usageChartCtx = document.getElementById('usageChart').getContext('2d');
-            new Chart(usageChartCtx, {
+            const dailyUsageChartCtx = document.getElementById('dailyUsageChart').getContext('2d');
+            
+            const usageChart = new Chart(usageChartCtx, {
                 type: 'line',
                 data: {
                     labels: labels,
@@ -260,38 +262,22 @@
                         {
                             label: 'Zużycie gazu',
                             data: gasData,
-                            borderColor: 'rgba(255, 205, 86, 1)', // Żółty
-                            backgroundColor: 'rgba(255, 205, 86, 0.2)', // Żółty
+                            borderColor: 'red',
+                            borderWidth: 2,
+                            fill: false
                         },
                         {
                             label: 'Zużycie prądu',
                             data: electricityData,
-                            borderColor: 'rgba(54, 162, 235, 1)', // Niebieski
-                            backgroundColor: 'rgba(54, 162, 235, 0.2)', // Niebieski
+                            borderColor: 'blue',
+                            borderWidth: 2,
+                            fill: false
                         }
                     ]
-                },
-                options: {
-                    responsive: true,
-                    scales: {
-                        x: {
-                            title: {
-                                display: true,
-                                text: 'Data'
-                            }
-                        },
-                        y: {
-                            title: {
-                                display: true,
-                                text: 'Zużycie'
-                            }
-                        }
-                    }
                 }
             });
 
-            const dailyUsageChartCtx = document.getElementById('dailyUsageChart').getContext('2d');
-            new Chart(dailyUsageChartCtx, {
+            const dailyUsageChart = new Chart(dailyUsageChartCtx, {
                 type: 'line',
                 data: {
                     labels: labels.slice(1),
@@ -299,140 +285,127 @@
                         {
                             label: 'Dzienne zużycie gazu',
                             data: dailyGasUsage,
-                            borderColor: 'rgba(255, 205, 86, 1)', // Żółty
-                            backgroundColor: 'rgba(255, 205, 86, 0.2)', // Żółty
+                            borderColor: 'red',
+                            borderWidth: 2,
+                            fill: false
                         },
                         {
                             label: 'Dzienne zużycie prądu',
                             data: dailyElectricityUsage,
-                            borderColor: 'rgba(54, 162, 235, 1)', // Niebieski
-                            backgroundColor: 'rgba(54, 162, 235, 0.2)', // Niebieski
+                            borderColor: 'blue',
+                            borderWidth: 2,
+                            fill: false
                         }
                     ]
-                },
-                options: {
-                    responsive: true,
-                    scales: {
-                        x: {
-                            title: {
-                                display: true,
-                                text: 'Data'
-                            }
-                        },
-                        y: {
-                            title: {
-                                display: true,
-                                text: 'Dzienne zużycie'
-                            }
-                        }
-                    }
                 }
             });
 
-            const filteredData = JSON.parse(localStorage.getItem('filteredData')) || [];
-
-            const filteredLabels = [];
-            const filteredGasData = [];
-            const filteredElectricityData = [];
-
-            filteredData.forEach(entry => {
-                filteredLabels.push(entry.date);
-                filteredGasData.push(entry.gas);
-                filteredElectricityData.push(entry.electricity);
-            });
-
-            const filteredUsageChartCtx = document.getElementById('filteredUsageChart').getContext('2d');
-            new Chart(filteredUsageChartCtx, {
-                type: 'line',
-                data: {
-                    labels: filteredLabels,
-                    datasets: [
-                        {
-                            label: 'Zużycie gazu (przefiltrowane)',
-                            data: filteredGasData,
-                            borderColor: 'rgba(255, 205, 86, 1)', // Żółty
-                            backgroundColor: 'rgba(255, 205, 86, 0.2)', // Żółty
-                        },
-                        {
-                            label: 'Zużycie prądu (przefiltrowane)',
-                            data: filteredElectricityData,
-                            borderColor: 'rgba(54, 162, 235, 1)', // Niebieski
-                            backgroundColor: 'rgba(54, 162, 235, 0.2)', // Niebieski
-                        }
-                    ]
-                },
-                options: {
-                    responsive: true,
-                    scales: {
-                        x: {
-                            title: {
-                                display: true,
-                                text: 'Data'
-                            }
-                        },
-                        y: {
-                            title: {
-                                display: true,
-                                text: 'Zużycie'
-                            }
-                        }
-                    }
-                }
-            });
-
-            const filteredDailyGasUsage = [];
-            const filteredDailyElectricityUsage = [];
-
-            for (let i = 1; i < filteredGasData.length; i++) {
-                filteredDailyGasUsage.push(filteredGasData[i] - filteredGasData[i - 1]);
-                filteredDailyElectricityUsage.push(filteredElectricityData[i] - filteredElectricityData[i - 1]);
-            }
-
-            const filteredDailyUsageChartCtx = document.getElementById('filteredDailyUsageChart').getContext('2d');
-            new Chart(filteredDailyUsageChartCtx, {
-                type: 'line',
-                data: {
-                    labels: filteredLabels.slice(1),
-                    datasets: [
-                        {
-                            label: 'Dzienne zużycie gazu (przefiltrowane)',
-                            data: filteredDailyGasUsage,
-                            borderColor: 'rgba(255, 205, 86, 1)', // Żółty
-                            backgroundColor: 'rgba(255, 205, 86, 0.2)', // Żółty
-                        },
-                        {
-                            label: 'Dzienne zużycie prądu (przefiltrowane)',
-                            data: filteredDailyElectricityUsage,
-                            borderColor: 'rgba(54, 162, 235, 1)', // Niebieski
-                            backgroundColor: 'rgba(54, 162, 235, 0.2)', // Niebieski
-                        }
-                    ]
-                },
-                options: {
-                    responsive: true,
-                    scales: {
-                        x: {
-                            title: {
-                                display: true,
-                                text: 'Data'
-                            }
-                        },
-                        y: {
-                            title: {
-                                display: true,
-                                text: 'Dzienne zużycie'
-                            }
-                        }
-                    }
-                }
-            });
-
-            generateTable(data, 'dataTable');
-            generateTable(filteredData, 'filteredDataTable');
+            generateTable(data);
         }
 
-        function generateTable(data, tableId) {
-            const tableContainer = document.getElementById(tableId);
+        function filterAndUpdateCharts() {
+            const startDate = document.getElementById('startDate').value;
+            const endDate = document.getElementById('endDate').value;
+
+            if (!startDate || !endDate) {
+                alert("Wprowadź zakres dat.");
+                return;
+            }
+
+            let data = JSON.parse(localStorage.getItem('usageData')) || [];
+            data = data.filter(entry => entry.date >= startDate && entry.date <= endDate);
+
+            if (data.length === 0) {
+                alert("Brak danych w wybranym zakresie.");
+                return;
+            }
+
+            const allDates = Array.from(new Set(data.map(entry => entry.date))).sort();
+            const dataMap = new Map(data.map(entry => [entry.date, { gas: entry.gas, electricity: entry.electricity }]));
+
+            const gasData = [];
+            const electricityData = [];
+            const labels = [];
+
+            let prevGas = 0;
+            let prevElectricity = 0;
+
+            allDates.forEach(date => {
+                labels.push(date);
+                if (dataMap.has(date)) {
+                    const { gas, electricity } = dataMap.get(date);
+                    gasData.push(gas);
+                    electricityData.push(electricity);
+                    prevGas = gas;
+                    prevElectricity = electricity;
+                } else {
+                    gasData.push(prevGas);
+                    electricityData.push(prevElectricity);
+                }
+            });
+
+            const dailyGasUsage = [];
+            const dailyElectricityUsage = [];
+
+            for (let i = 1; i < gasData.length; i++) {
+                dailyGasUsage.push(gasData[i] - gasData[i - 1]);
+                dailyElectricityUsage.push(electricityData[i] - electricityData[i - 1]);
+            }
+
+            const filteredUsageChartCtx = document.getElementById('filteredUsageChart').getContext('2d');
+            const filteredDailyUsageChartCtx = document.getElementById('filteredDailyUsageChart').getContext('2d');
+            
+            const filteredUsageChart = new Chart(filteredUsageChartCtx, {
+                type: 'line',
+                data: {
+                    labels: labels,
+                    datasets: [
+                        {
+                            label: 'Zużycie gazu',
+                            data: gasData,
+                            borderColor: 'red',
+                            borderWidth: 2,
+                            fill: false
+                        },
+                        {
+                            label: 'Zużycie prądu',
+                            data: electricityData,
+                            borderColor: 'blue',
+                            borderWidth: 2,
+                            fill: false
+                        }
+                    ]
+                }
+            });
+
+            const filteredDailyUsageChart = new Chart(filteredDailyUsageChartCtx, {
+                type: 'line',
+                data: {
+                    labels: labels.slice(1),
+                    datasets: [
+                        {
+                            label: 'Dzienne zużycie gazu',
+                            data: dailyGasUsage,
+                            borderColor: 'red',
+                            borderWidth: 2,
+                            fill: false
+                        },
+                        {
+                            label: 'Dzienne zużycie prądu',
+                            data: dailyElectricityUsage,
+                            borderColor: 'blue',
+                            borderWidth: 2,
+                            fill: false
+                        }
+                    ]
+                }
+            });
+
+            generateFilteredTable(data);
+        }
+
+        function generateTable(data) {
+            const tableContainer = document.getElementById('dataTable');
             tableContainer.innerHTML = '';
 
             if (data.length === 0) {
@@ -445,50 +418,109 @@
             const tbody = document.createElement('tbody');
 
             const headerRow = document.createElement('tr');
-            const headers = ['Data', 'Stan licznika gazu', 'Stan licznika prądu'];
-            headers.forEach(headerText => {
+            ['Data', 'Stan licznika gazu', 'Stan licznika prądu', 'Dzienne zużycie gazu', 'Dzienne zużycie prądu'].forEach(text => {
                 const th = document.createElement('th');
-                th.textContent = headerText;
+                th.textContent = text;
                 headerRow.appendChild(th);
             });
-            thead.appendChild(headerRow);
 
-            data.forEach(item => {
+            thead.appendChild(headerRow);
+            table.appendChild(thead);
+
+            let prevGas = 0;
+            let prevElectricity = 0;
+
+            data.forEach((entry, index) => {
                 const row = document.createElement('tr');
-                const cells = [item.date, item.gas, item.electricity];
-                cells.forEach(cellText => {
-                    const td = document.createElement('td');
-                    td.textContent = cellText;
-                    row.appendChild(td);
-                });
+                const dateCell = document.createElement('td');
+                dateCell.textContent = entry.date;
+                row.appendChild(dateCell);
+
+                const gasCell = document.createElement('td');
+                gasCell.textContent = entry.gas;
+                row.appendChild(gasCell);
+
+                const electricityCell = document.createElement('td');
+                electricityCell.textContent = entry.electricity;
+                row.appendChild(electricityCell);
+
+                const dailyGasCell = document.createElement('td');
+                dailyGasCell.textContent = index === 0 ? 'N/A' : (entry.gas - prevGas).toFixed(2);
+                row.appendChild(dailyGasCell);
+
+                const dailyElectricityCell = document.createElement('td');
+                dailyElectricityCell.textContent = index === 0 ? 'N/A' : (entry.electricity - prevElectricity).toFixed(2);
+                row.appendChild(dailyElectricityCell);
+
                 tbody.appendChild(row);
+
+                prevGas = entry.gas;
+                prevElectricity = entry.electricity;
             });
 
-            table.appendChild(thead);
             table.appendChild(tbody);
             tableContainer.appendChild(table);
         }
 
-        function filterAndUpdateCharts() {
-            const startDate = new Date(document.getElementById('startDate').value);
-            const endDate = new Date(document.getElementById('endDate').value);
+        function generateFilteredTable(data) {
+            const tableContainer = document.getElementById('filteredDataTable');
+            tableContainer.innerHTML = '';
 
-            if (isNaN(startDate.getTime()) || isNaN(endDate.getTime())) {
-                alert("Wprowadź poprawny zakres dat.");
+            if (data.length === 0) {
+                tableContainer.innerHTML = '<p>Brak danych do wyświetlenia.</p>';
                 return;
             }
 
-            const data = JSON.parse(localStorage.getItem('usageData')) || [];
-            const filteredData = data.filter(entry => {
-                const entryDate = new Date(entry.date);
-                return entryDate >= startDate && entryDate <= endDate;
+            const table = document.createElement('table');
+            const thead = document.createElement('thead');
+            const tbody = document.createElement('tbody');
+
+            const headerRow = document.createElement('tr');
+            ['Data', 'Stan licznika gazu', 'Stan licznika prądu', 'Dzienne zużycie gazu', 'Dzienne zużycie prądu'].forEach(text => {
+                const th = document.createElement('th');
+                th.textContent = text;
+                headerRow.appendChild(th);
             });
 
-            localStorage.setItem('filteredData', JSON.stringify(filteredData));
-            updateCharts();
+            thead.appendChild(headerRow);
+            table.appendChild(thead);
+
+            let prevGas = 0;
+            let prevElectricity = 0;
+
+            data.forEach((entry, index) => {
+                const row = document.createElement('tr');
+                const dateCell = document.createElement('td');
+                dateCell.textContent = entry.date;
+                row.appendChild(dateCell);
+
+                const gasCell = document.createElement('td');
+                gasCell.textContent = entry.gas;
+                row.appendChild(gasCell);
+
+                const electricityCell = document.createElement('td');
+                electricityCell.textContent = entry.electricity;
+                row.appendChild(electricityCell);
+
+                const dailyGasCell = document.createElement('td');
+                dailyGasCell.textContent = index === 0 ? 'N/A' : (entry.gas - prevGas).toFixed(2);
+                row.appendChild(dailyGasCell);
+
+                const dailyElectricityCell = document.createElement('td');
+                dailyElectricityCell.textContent = index === 0 ? 'N/A' : (entry.electricity - prevElectricity).toFixed(2);
+                row.appendChild(dailyElectricityCell);
+
+                tbody.appendChild(row);
+
+                prevGas = entry.gas;
+                prevElectricity = entry.electricity;
+            });
+
+            table.appendChild(tbody);
+            tableContainer.appendChild(table);
         }
 
-        updateCharts(); // Inicjalizacja wykresów po załadowaniu strony
+        window.onload = updateCharts;
     </script>
 </body>
 </html>
