--- a/index.html
+++ b/index.html
@@ -262,14 +262,14 @@
                         {
                             label: 'Zużycie gazu',
                             data: gasData,
-                            borderColor: 'red',
+                            borderColor: '#FFD700', // Żółty
                             borderWidth: 2,
                             fill: false
                         },
                         {
                             label: 'Zużycie prądu',
                             data: electricityData,
-                            borderColor: 'blue',
+                            borderColor: '#1E90FF', // Niebieski
                             borderWidth: 2,
                             fill: false
                         }
@@ -285,14 +285,14 @@
                         {
                             label: 'Dzienne zużycie gazu',
                             data: dailyGasUsage,
-                            borderColor: 'red',
+                            borderColor: '#FFD700', // Żółty
                             borderWidth: 2,
                             fill: false
                         },
                         {
                             label: 'Dzienne zużycie prądu',
                             data: dailyElectricityUsage,
-                            borderColor: 'blue',
+                            borderColor: '#1E90FF', // Niebieski
                             borderWidth: 2,
                             fill: false
                         }
@@ -363,14 +363,14 @@
                         {
                             label: 'Zużycie gazu',
                             data: gasData,
-                            borderColor: 'red',
+                            borderColor: '#FFD700', // Żółty
                             borderWidth: 2,
                             fill: false
                         },
                         {
                             label: 'Zużycie prądu',
                             data: electricityData,
-                            borderColor: 'blue',
+                            borderColor: '#1E90FF', // Niebieski
                             borderWidth: 2,
                             fill: false
                         }
@@ -386,14 +386,14 @@
                         {
                             label: 'Dzienne zużycie gazu',
                             data: dailyGasUsage,
-                            borderColor: 'red',
+                            borderColor: '#FFD700', // Żółty
                             borderWidth: 2,
                             fill: false
                         },
                         {
                             label: 'Dzienne zużycie prądu',
                             data: dailyElectricityUsage,
-                            borderColor: 'blue',
+                            borderColor: '#1E90FF', // Niebieski
                             borderWidth: 2,
                             fill: false
                         }
