--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 
         th, td {
             padding: 4px;
-            text-align: left;
-            font-size: 12px;
+            text-align: center;
+            font-size: 11px;
             white-space: nowrap;
         }
 
