--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
             const tbody = document.createElement('tbody');
 
             const headerRow = document.createElement('tr');
-            ['Data', 'Stan licznika gazu', 'Stan licznika prądu', 'Dzienne zużycie gazu', 'Dzienne zużycie prądu'].forEach(text => {
+            ['Data', 'Licznik Gazu', 'Licznik prądu', 'Zużycie gazu', 'Zużycie prądu'].forEach(text => {
                 const th = document.createElement('th');
                 th.textContent = text;
                 headerRow.appendChild(th);
@@ -476,7 +476,7 @@
             const tbody = document.createElement('tbody');
 
             const headerRow = document.createElement('tr');
-            ['Data', 'Stan licznika gazu', 'Stan licznika prądu', 'Dzienne zużycie gazu', 'Dzienne zużycie prądu'].forEach(text => {
+            ['Data', 'Licznik gazu', 'Licznik prądu', 'Zużycie gazu', 'Zużycie prądu'].forEach(text => {
                 const th = document.createElement('th');
                 th.textContent = text;
                 headerRow.appendChild(th);
